fix: text contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,7 +67,7 @@
   --secondary: #ececec;
   --secondary-foreground: #000000;
   --muted: #ececec;
-  --muted-foreground: #b7b7b7;
+  --muted-foreground: #334558;
   --accent: #ececec;
   --accent-foreground: #000000;
   --destructive: #d70000;
